CLIENT-SIDE AEM DEVELOPMENT. Task performed.

--- a/ui.apps/src/main/content/jcr_root/apps/training/components/page-content/page-content.html
+++ b/ui.apps/src/main/content/jcr_root/apps/training/components/page-content/page-content.html
@@ -16,3 +16,6 @@
 <h2>I’m your rendering script!!</h2>
 </body>
 </html>
+
+<sly data-sly-use.clientlib="/libs/granite/slightly/templates/clientlib.html"
+     data-sly-call="${clientlib.all @ categories= 'training.edit'}"/>
