JACKRABBIT OAK. JCR (OAK) BASICS. Bugs have been fixed. Code covered with tests.

--- a/ui.apps/src/main/content/jcr_root/apps/training/components/page-content/page-content.html
+++ b/ui.apps/src/main/content/jcr_root/apps/training/components/page-content/page-content.html
@@ -13,11 +13,11 @@
 </head>
 <body>
 
-
-<sly data-sly-use.searchService="trainingproject.core.models.SearchModel">
+<sly data-sly-use.searchService="trainingproject.core.models..SearchServiceImpl">
     <!--Element is under path(es):-->
     ${searchService.getResult}
 </sly>
+
 
 <div>
     <div>logo</div>
